--- a/global.css
+++ b/global.css
@@ -143,12 +143,19 @@
   font-size: 14px;
 }
 
-.alert-button {
-  background-color: var(--accent);
-  color: var(--window-bg);
+.dialog-title {
+  padding: 16px 24px;
+  font-size: 20px;
+  font-weight: 500;
 }
 
-.alert-button:hover {
-  background-color: var(--accent);
-  box-shadow: 0 0 8px rgba(137, 180, 250, 0.5);
+.dialog-content {
+  padding: 0 24px 20px 24px;
+  font-size: 16px;
+}
+
+.dialog-actions {
+  padding: 8px;
+  display: flex;
+  justify-content: flex-end;
 }
