feat: new APIs, settings, Widgets are here! and more

--- a/global.css
+++ b/global.css
@@ -1,4 +1,3 @@
-
 #ctxmenu {
   position: fixed;
   background: var(--window-bg);
@@ -158,4 +157,15 @@
   padding: 8px;
   display: flex;
   justify-content: flex-end;
+}
+
+.window-widget {
+  position: absolute;
+  background: var(--window-bg);
+  backdrop-filter: blur(10px);
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  resize: both;
+  overflow: auto;
 }
